# FoxML_Trader

./: .gitignore  BOUNTY.md  CHANGELOG.md  CMakeLists.txt  LICENSE  Limits.hpp  README.md  Version.hpp  engine.cfg.example  foxml_suite.cpp  main.cpp  run.sh
Backtest/: BacktestEngine.hpp  BacktestPanels.hpp  BacktestSnapshot.hpp  Fingerprint.hpp  LabelFunctions.hpp  OverfitDetection.hpp  ValidationSplit.hpp
CoreFrameworks/: ControllerConfig.hpp  OrderGates.hpp  Portfolio.hpp  PortfolioController.hpp
DOCS/: ML_USAGE.md
DataStream/: BinanceCrypto.hpp  BinanceDepth.hpp  BinanceOrderAPI.hpp  EngineTUI.hpp  FauxFIX.hpp  MetricsLog.hpp  MockGenerator.hpp  TUIAnsi.hpp  TradeLog.hpp  WebSocketUtil.hpp
FixedPoint/: FixedPoint64.hpp  FixedPointN.hpp
GUI/: CandleAccumulator.hpp  ChartPanel.hpp  DashboardPanels.hpp  FoxmlTheme.hpp  GuiThread.hpp  LogViewerPanel.hpp  SettingsPanel.hpp  TradeHistoryPanel.hpp  TradeReader.hpp
ML_Headers/: BanditLearning.hpp  BarrierGate.hpp  ConfidenceScore.hpp  CostModel.hpp  GateControlNetwork.hpp  LinearRegression3X.hpp  LinearRegressionSimple.hpp  ModelInference.hpp  ROR_regressor.hpp  RewardTracker.hpp  RollingStats.hpp  VolScaler.hpp  WelfordStats.hpp
MemHeaders/: BuddyAllocator.hpp  PoolAllocator.hpp
Strategies/: MLStrategy.hpp  MeanReversion.hpp  Momentum.hpp  RegimeDetector.hpp  SimpleDip.hpp  StrategyInterface.hpp
Strategies/private/: EmaCross.hpp
plans/: ml-inference-harness.md
scripts/: download_data.sh
tests/: binance_test  binance_test.cpp  controller_test  controller_test.cpp  integration_test.cpp
tools/: chart.py
